HelloRoles, BiPair, ConsumeItems compile, RemoteFunction check roles